infra/k8s/action-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: action-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: action
  template:
    metadata:
      labels:
        app: action
    spec:
      containers:
        - name: action
          image: pumulo/action
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: action-srv
spec:
  selector:
    app: action
  ports:
    - name: action
      protocol: TCP
      port: 3000
      targetPort: 3000
