infra/k8s/decision-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: decision-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: decision
  template:
    metadata:
      labels:
        app: decision
    spec:
      containers:
        - name: decision
          image: pumulo/decision
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: decision-srv
spec:
  selector:
    app: decision
  ports:
    - name: decision
      protocol: TCP
      port: 3000
      targetPort: 3000
