infra/k8s/entity-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entity-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: entity
  template:
    metadata:
      labels:
        app: entity
    spec:
      containers:
        - name: entity
          image: registry.digitalocean.com/pumulo/entity
---
apiVersion: v1
kind: Service
metadata:
  name: entity-srv
spec:
  selector:
    app: entity
  ports:
    - name: entity
      protocol: TCP
      port: 3000
      targetPort: 3000
