infra/k8s/form-mongo-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: form-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: form-mongo
  template:
    metadata:
      labels:
        app: form-mongo
    spec:
      containers:
        - name: form-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: form-mongo-srv
spec:
  selector:
    app: form-mongo
  ports:
    - name: form-mongo-db
      protocol: TCP
      port: 27017
      targetPort: 27017
