infra/k8s/genai-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: genai-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: genai
  template:
    metadata:
      labels:
        app: genai
    spec:
      containers:
        - name: genai
          image: pumulo/gen_ai
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: genai-srv
spec:
  selector:
    app: genai
  ports:
    - name: genai
      protocol: TCP
      port: 3000
      targetPort: 3000
