infra/k8s/get-it-pega-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: get-it-pega-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: get-it-pega
  template:
    metadata:
      labels:
        app: get-it-pega
    spec:
      containers:
        - name: get-it-pega
          image: pumulo/pega_get-it
---
apiVersion: v1
kind: Service
metadata:
  name: get-it-pega-srv
spec:
  selector:
    app: get-it-pega
  ports:
    - name: get-it-pega
      port: 3000
      targetPort: 3000
