infra/k8s/shared-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shared-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shared
  template:
    metadata:
      labels:
        app: shared
    spec:
      containers:
        - name: shared
          image: pumulo/shared
---
apiVersion: v1
kind: Service
metadata:
  name: shared-srv
spec:
  selector:
    app: shared
  ports:
    - name: shared
      protocol: TCP
      port: 3000
      targetPort: 3000
