infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: local.get-it.solutions
      http:
        paths:
          - path: /api/entity/?(.*)
            pathType: Prefix
            backend:
             service:
              name: entity-srv
              port:
                number: 3000
    - host: www.get-it.solutions
      http:
        paths:
          - path: /api/entity/?(.*)
            pathType: Prefix
            backend:
             service:
              name: entity-srv
              port:
                number: 3000
